[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "nio-bot"
description = "Making matrix bots simple"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = { text = "GNU GPLv3" }
authors = [
    {name = "Nexus", email = "pip@nexy7574.co.uk"}
]
dynamic = ["version", "dependencies"]

[project.urls]
Source = "https://github.com/eekim10/niobot"
Tracker = "https://github.com/eekim10/niobot/issues"
Documentation = "https://eekim10.github.io/niobot/"


[project.optional-dependencies]
e2ee = ['matrix-nio[e2e]']
cli = ['httpx', 'click']
dev = [
    'mkdocs',
    'mkdocs-material',
    'black',
    'mkdocs-autorefs',
    'mkdocs-glightbox',
    'mkdocstrings[python]',
    'mkdocs-git-revision-date-localized-plugin',
    'isort',
    'build',
    'pep440'
]

[project.scripts]
niocli = "niobot.__main__:cli_root [cli]"

[tool.setuptools_scm]
write_to = "src/niobot/__version__.py"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.black]
line-length = 120
target-version = ["py311"]
include = 'src/niobot(/utils)?/.+\.py'

[tool.isort]
profile = "black"
src_paths = ["src/niobot"]
